--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
                 <td><img src="CircleHusky.png" alt="Husky Dog picture" ></td>
                 <td><h1>Andy Zheng</h1>
                     <p><a href="https://eyt.service-now.com/ey?id=kb_article_view&sys_kb_id=e66b099e87e18590916f43b8cebb35fd">EY OSTS</a><strong><em>(On-site technology support)</em></strong></p>
-                    <p>I am a IT support for EY and also a gamer.</p></td>
+                    <p>I am a IT support</p></td>
             </tr>
         </table>
         <hr>
